Adding initial files for jekyll

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,8 +1,8 @@
 /*!
-Theme Name: Tuts Bower
+Theme Name: Tuts Github Pages
 Theme URI: http://code.tutsplus.com/
 Version: 1.0.0
-Description: Example project for tutorial on Bower for Tuts+
+Description: Example project for tutorial on GitHub Pages for Tuts+
 Author: Jason Bradley
 Author URI: http://jasonbradley.me
 License: GNU General Public License v3.0
