Creating header and footer includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,7 @@
 
 <body class="home page">
 
-<header id="masthead" class="blog-masthead">
-    <div class="container">
-        <nav class="blog-nav">
-            <li class="menu-item current-menu-item current_page_item"><a href="#">Home</a></li>
-        </nav>
-    </div>
-</header> <!-- /header -->
+{% include header.html %}
 
 <div class="container">
 
@@ -46,11 +40,6 @@
     </div><!-- /.row -->
 </div><!-- /.container -->
 
-<footer class="blog-footer">
-    <p>&copy;2014&nbsp;<a href="#">Tuts+ GitHub Pages</a> &middot; Tuts GitHub Pages by <a href="http://jasonbradley.me">Jason Bradley</a> &middot; Powered by WordPress</p>
-    <p>
-        <a href="#">Back to top</a>
-    </p>
-</footer>
+{% include footer.html %}
 
 </body>
