--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Tuts GitHub Pages</title>
-    <link rel='stylesheet' id='theme-css'  href='http://localhost:8888/ecm-child-themes/wp-content/themes/tuts-github-pages/style.css?ver=1.0.0' type='text/css' media='all' />
-    <script type='text/javascript' src='http://localhost:8888/ecm-child-themes/wp-includes/js/jquery/jquery.js?ver=1.11.0'></script>
-    <script type='text/javascript' src='http://localhost:8888/ecm-child-themes/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1'></script>
-    <script type='text/javascript' src='http://localhost:8888/ecm-child-themes/wp-content/themes/tuts-github-pages/js/theme.min.js?ver=1.0.0'></script>
+    <link rel='stylesheet' id='theme-css'  href='{{ site.url }}/style.css?ver=1.0.0' type='text/css' media='all' />
+    <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
+    <script type='text/javascript' src='http://code.jquery.com/jquery-migrate-git.min.js'></script>
+    <script type='text/javascript' src='{{ site.url }}/js/theme.min.js?ver=1.0.0'></script>
 </head>
